[gd_scene load_steps=13 format=3 uid="uid://bhn3hfm6j1ffh"]

[ext_resource type="Script" uid="uid://borrqerktt3c6" path="res://Scripts/Level7_Light/button.gd" id="1_rapf0"]
[ext_resource type="Script" uid="uid://cq46pyhsuqnca" path="res://Scripts/Level7_Light/level7_Light.gd" id="1_tx3dr"]
[ext_resource type="Script" uid="uid://bagilgmp7h5hr" path="res://Scripts/Level7_Light/spot_light.gd" id="4_4hali"]
[ext_resource type="Texture2D" uid="uid://bglb5ug5tcktu" path="res://Assets/Sprites/CANOON/direction.png" id="5_cb3w2"]
[ext_resource type="Texture2D" uid="uid://b25p4w4n4fxw5" path="res://Assets/Sprites/CANOON/light_shape.png" id="5_jlpkf"]
[ext_resource type="FontFile" uid="uid://dn8i2b1qkd2c2" path="res://Assets/font/Starborn.ttf" id="7_cb3w2"]
[ext_resource type="Texture2D" uid="uid://bmlm21vb44kjs" path="res://Assets/Sprites/OTHER/etoile_laby.png" id="7_ooa8c"]
[ext_resource type="Texture2D" uid="uid://cxx2tbuad0016" path="res://Assets/Sprites/LIGHTS/lumiere.png" id="8_2fqn6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrbaa"]
size = Vector2(92.5, 79.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wrbaa"]
radius = 28.0
height = 56.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cb3w2"]
size = Vector2(80, 1613)

[sub_resource type="Theme" id="Theme_2fqn6"]
default_font = ExtResource("7_cb3w2")
default_font_size = 128

[node name="Level7" type="Node2D"]
position = Vector2(-812, -461)
script = ExtResource("1_tx3dr")
speed = 400.0

[node name="SpotLights" type="Node2D" parent="."]

[node name="spotLight_4" type="Node2D" parent="SpotLights"]
position = Vector2(2261, 229)
script = ExtResource("4_4hali")

[node name="Area2D" type="Area2D" parent="SpotLights/spotLight_4"]
position = Vector2(-629, 102)
rotation = -0.523599
scale = Vector2(1, 0.9)
collision_layer = 0
input_pickable = false

[node name="PointLight2D" type="PointLight2D" parent="SpotLights/spotLight_4/Area2D"]
position = Vector2(-230.069, 336.102)
rotation = -2.59356
scale = Vector2(2.11812, 3.86303)
color = Color(1, 1, 0, 1)
texture = ExtResource("5_jlpkf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpotLights/spotLight_4/Area2D"]
position = Vector2(-477.897, 677.49)
polygon = PackedVector2Array(-23.2155, 98.0115, 83.1296, -377.76, 332, -638.934, 280.623, -848.947, 416.546, -843.864, 575.734, -763.556, 649.353, -625.236, 640.154, -496.422, 519.844, -342.661)

[node name="spotLight_3" type="Node2D" parent="SpotLights"]
position = Vector2(2393, -432)
script = ExtResource("4_4hali")

[node name="Area2D" type="Area2D" parent="SpotLights/spotLight_3"]
position = Vector2(-629, 102)
rotation = -0.523599
scale = Vector2(1, 0.9)
collision_layer = 0
input_pickable = false

[node name="PointLight2D" type="PointLight2D" parent="SpotLights/spotLight_3/Area2D"]
position = Vector2(-955.826, 775.044)
rotation = -2.65639
scale = Vector2(1.87531, 3.55429)
color = Color(1, 1, 0, 1)
texture = ExtResource("5_jlpkf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpotLights/spotLight_3/Area2D"]
position = Vector2(-1771.16, 1313.05)
polygon = PackedVector2Array(576.408, -95.9635, 733.052, -897.426, 847.782, -989.334, 976.946, -1000.13, 1085.91, -952.047, 1156.07, -849.302, 1171.99, -704.376, 1006.5, -543.673, 869.563, -389.03, 719.833, -229.764)

[node name="spotLight_2" type="Node2D" parent="SpotLights"]
position = Vector2(896, 246)
script = ExtResource("4_4hali")

[node name="Area2D" type="Area2D" parent="SpotLights/spotLight_2"]
position = Vector2(-629, 102)
rotation = -0.523599
scale = Vector2(1, 0.9)
collision_layer = 0
input_pickable = false

[node name="PointLight2D" type="PointLight2D" parent="SpotLights/spotLight_2/Area2D"]
position = Vector2(37.3976, -294.194)
rotation = -5.7177
scale = Vector2(2.14599, 2.90792)
color = Color(1, 1, 0, 1)
texture = ExtResource("5_jlpkf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpotLights/spotLight_2/Area2D"]
position = Vector2(-8.53589, 25.3163)
polygon = PackedVector2Array(267.342, -661.167, -318.946, -266.188, -260.542, -45.253, -61.3564, 82.5248, 177.289, -72.3041)

[node name="spotLight_1" type="Node2D" parent="SpotLights"]
position = Vector2(448, 123)
script = ExtResource("4_4hali")

[node name="Area2D" type="Area2D" parent="SpotLights/spotLight_1"]
position = Vector2(-629, 102)
rotation = -0.523599
scale = Vector2(1, 0.9)
collision_layer = 0
input_pickable = false

[node name="PointLight2D" type="PointLight2D" parent="SpotLights/spotLight_1/Area2D"]
position = Vector2(672.689, 360.965)
rotation = 0.445059
scale = Vector2(1.91388, 3.3036)
color = Color(1, 1, 0, 1)
texture = ExtResource("5_jlpkf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpotLights/spotLight_1/Area2D"]
position = Vector2(947.879, 558.028)
polygon = PackedVector2Array(-75.7426, -629.788, -629.402, -50.937, -580.515, 130.535, -382.856, 236.806, -188.282, 184.571)

[node name="spotLight_5" type="Node2D" parent="SpotLights"]
position = Vector2(-1329, 659)
script = ExtResource("4_4hali")

[node name="Area2D" type="Area2D" parent="SpotLights/spotLight_5"]
position = Vector2(-629, 102)
rotation = -0.523599
scale = Vector2(1, 0.9)
collision_layer = 0
input_pickable = false

[node name="PointLight2D" type="PointLight2D" parent="SpotLights/spotLight_5/Area2D"]
position = Vector2(-230.069, 336.102)
rotation = -2.59356
scale = Vector2(2.11812, 3.86303)
color = Color(1, 1, 0, 1)
texture = ExtResource("5_jlpkf")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SpotLights/spotLight_5/Area2D"]
position = Vector2(226.491, 866.34)
polygon = PackedVector2Array(809.782, 352.685, 980.452, 13.1201, 1286.39, 213.229, 1110.76, 553.459, 1865.5, 1020.95, 2265.45, 1346.8, 3267.44, 1989.58, 4060.91, 471.445, 1431.66, -1215.22, 644.12, 309.28, 582.766, 267.356, 1425.79, -1330.6, 4161.82, 452.788, 3267.67, 2118.03, 604.521, 378.82, 646.852, 308.467)

[node name="Button" type="Node2D" parent="."]
position = Vector2(-340, 1023)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Button"]
scale = Vector2(0.367188, 0.367188)
texture = ExtResource("5_cb3w2")

[node name="Left_Button" type="Area2D" parent="Button"]
script = ExtResource("1_rapf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Left_Button"]
position = Vector2(-113, -3)
shape = SubResource("RectangleShape2D_wrbaa")

[node name="Right_Button" type="Area2D" parent="Button"]
script = ExtResource("1_rapf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Right_Button"]
position = Vector2(107, -5)
shape = SubResource("RectangleShape2D_wrbaa")

[node name="Up_Button" type="Area2D" parent="Button"]
script = ExtResource("1_rapf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Up_Button"]
position = Vector2(0, -103)
shape = SubResource("RectangleShape2D_wrbaa")

[node name="Down_Button" type="Area2D" parent="Button"]
script = ExtResource("1_rapf0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Down_Button"]
position = Vector2(-3, 110)
shape = SubResource("RectangleShape2D_wrbaa")

[node name="little_ch" type="CharacterBody2D" parent="."]
position = Vector2(-365, 457)
collision_mask = 0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="little_ch"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_ooa8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="little_ch"]
shape = SubResource("CapsuleShape2D_wrbaa")

[node name="End" type="Area2D" parent="."]
position = Vector2(1371, 468)

[node name="CollisionShape2D" type="CollisionShape2D" parent="End"]
position = Vector2(885, -6.5)
shape = SubResource("RectangleShape2D_cb3w2")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -391.0
offset_top = -623.0
offset_right = 2155.0
offset_bottom = -361.0
theme = SubResource("Theme_2fqn6")
theme_override_colors/font_shadow_color = Color(0.913725, 0.866667, 0.733333, 1)
theme_override_constants/shadow_outline_size = 100
bbcode_enabled = true
text = "[shake rate=10.0 level=30
 connected=1]7 .STAY IN THE LIGHT  [/shake]"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Lumiere" type="Sprite2D" parent="."]
position = Vector2(940, 455)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_2fqn6")
